--- a/themes/google chrome/Custom.css
+++ b/themes/google chrome/Custom.css
@@ -528,6 +528,7 @@
 #-webkit-web-inspector .monospace,
 #-webkit-web-inspector .source-code {
 	color: #CCC !important;
+	font-size: 12px !important;
 }
 
 #-webkit-web-inspector .pane .monospace,
@@ -842,7 +843,7 @@
 #-webkit-web-inspector #console-messages .console-group-messages .section .header::before,
 #-webkit-web-inspector #console-messages .properties-tree li.parent::before,
 #-webkit-web-inspector .outline-disclosure li.parent::before {
-	content: url(chrome-devtools://devtools/Images/treeRightTriangleWhite.png) #242424 !important;
+	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) #242424 !important;
 }
 
 #-webkit-web-inspector .properties-tree li,
@@ -859,7 +860,7 @@
 #-webkit-web-inspector #console-messages .console-group-messages .section.expanded .header::before,
 #-webkit-web-inspector #console-messages .properties-tree li.parent.expanded::before,
 #-webkit-web-inspector .outline-disclosure li.parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/treeDownTriangleWhite.png) #242424 !important;
+	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) #242424 !important;
 }
 
 @-webkit-keyframes webkit-error-level {
@@ -943,6 +944,7 @@
 
 #-webkit-web-inspector #elements-content .selected {
 	background-color: #333 !important;
+	border-left: 3px solid #ccc !important;
 }
 
 #-webkit-web-inspector #elements-content .editing {
@@ -951,13 +953,13 @@
 }
 
 #-webkit-web-inspector #elements-content .parent::before {
-	content: url(chrome-devtools://devtools/Images/treeRightTriangleWhite.png) !important;
+	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
 	position: relative;
 	z-index: 999;
 }
 
 #-webkit-web-inspector #elements-content .parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/treeDownTriangleWhite.png) !important;
+	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
 }
 
 #-webkit-web-inspector .styles-element-state-pane {
@@ -1078,4 +1080,23 @@
 /* Set the console tab as the first item */
 #-webkit-web-inspector #toolbar .toolbar-item.console {
 	float: left;
+}
+
+/**********************************************/
+/* Popup (popover)
+/**********************************************/
+#-webkit-web-inspector .popover {
+	-webkit-border-image: none !important;
+	background: #333 !important;
+	box-shadow: 0 0 10px 0 #333 !important;
+}
+
+#-webkit-web-inspector .popover .content span {
+	color: #fff !important;
+	padding-top: 10px;
+}
+
+#-webkit-web-inspector .popover .arrow {
+	margin-left: 10px !important;
+	margin-top: -15px !important;
 }
