--- a/themes/google chrome canary/Custom.css
+++ b/themes/google chrome canary/Custom.css
@@ -22,13 +22,23 @@
 /**********************************************/
 
 /*
-	Colours:
+	## Colours
 	lightgreen: #a6e70a;
 	lightblue: #72d9e7;
 	purple: #a775ff;
 	yellow: #e6da83;
 	darkred: #c41a16;
 */
+
+/*
+	## Images
+	disclosureTriangleSmallDownWhite.png
+	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==);
+
+	disclosureTriangleSmallRightWhite.png
+	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC);
+*/
+
 
 /*
 	Dock-To-Right when using vertical splitting:
@@ -44,7 +54,7 @@
 	 ************************************/
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements .split-view-contents:first-child,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  .split-view-contents:first-child {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts .split-view-contents:first-child {
 		width: 100%;
 		height: 75%;
 		top: auto !important;
@@ -52,7 +62,7 @@
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements .split-view-contents.split-view-sidebar-right,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  .split-view-contents.split-view-sidebar-right {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts .split-view-contents.split-view-sidebar-right {
 		width: 100% !important;
 		height: 25% !important;
 		left: 0;
@@ -60,19 +70,19 @@
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  > .split-view {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view {
 		display: -webkit-flex;
 		-webkit-flex-flow: column;
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view > * ,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  > .split-view > * {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view > * {
 		-webkit-flex: 0;
 		position: relative !important;
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view > :first-child,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  > .split-view > :first-child {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view > :first-child {
 		-webkit-flex: 1;
 	}
 
@@ -403,14 +413,6 @@
 	color: #f8f8f8 !important;
 }
 
-#-webkit-web-inspector #toolbar div:first-child {
-	display: none !important;
-}
-
-#-webkit-web-inspector #toolbar > div:first-child {
-	display: block !important;
-}
-
 #-webkit-web-inspector #main {
 	top: 34px !important;
 }
@@ -591,6 +593,33 @@
 	background-color: #444 !important;
 }
 
+/* Tabs added in Version 31.0.1616.0 canary */
+#-webkit-web-inspector .sidebar-tabbed-pane .tabbed-pane-header {
+	background-image: none !important;
+	background-color: #222 !important;
+	border-color: #333 !important;
+	color: #ccc !important;
+}
+
+#-webkit-web-inspector .styles-element-state-pane {
+	height: auto !important;
+}
+
+#-webkit-web-inspector .tabbed-pane-header-tab {
+	padding: 4px !important;
+	margin: 0 !important;
+}
+
+#-webkit-web-inspector .tabbed-pane-header-tab.selected {
+	background-color: #333 !important;
+	border-color: #222 !important;
+}
+
+#-webkit-web-inspector .tabbed-pane-header-tabs-drop-down-container {
+	background: #444 !important;
+	padding: 0 2px 2px !important;
+}
+
 /* Resources info */
 #-webkit-web-inspector .resource-view.image .title {
 	color: #ccc !important;
@@ -641,14 +670,22 @@
 /* Add drop down arrows to Event Listeners */
 #-webkit-web-inspector .section.expanded .header::before,
 #-webkit-web-inspector .event-bars .event-bar.expanded .header::before,
-#-webkit-web-inspector #scripts-debug-sidebar-contents .properties-tree li.parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
+#-webkit-web-inspector .section .properties-tree li.parent.expanded::before,
+#-webkit-web-inspector .computed-style .properties-tree li.parent.expanded::before,
+#-webkit-web-inspector .event-listener-breakpoints li.parent.expanded::before {
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) !important;
 }
 
 #-webkit-web-inspector .section .header::before,
 #-webkit-web-inspector .event-bars .event-bar .header::before,
-#-webkit-web-inspector #scripts-debug-sidebar-contents .properties-tree li.parent::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
+#-webkit-web-inspector .section .properties-tree li.parent::before,
+#-webkit-web-inspector .computed-style .properties-tree li.parent::before,
+#-webkit-web-inspector .event-listener-breakpoints li.parent::before {
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) !important;
+}
+
+#-webkit-web-inspector .event-listener-breakpoints .event-category {
+	color: #606060 !important; /* Sources > Event Listeners Text */
 }
 
 /* Network */
@@ -698,6 +735,13 @@
 	background: #333;
 }
 
+#-webkit-web-inspector #network-views .network-item-view .tabbed-pane-header {
+	background-image: none !important;
+	background-color: #222 !important;
+	border-color: #333 !important;
+	color: #ccc !important;
+}
+
 /* Timeline */
 #-webkit-web-inspector .sidebar-tree-section {
 	text-shadow: none !important;
@@ -738,7 +782,7 @@
 }
 
 #-webkit-web-inspector .outline-disclosure > ol .source-code {
-	color: #000 !important;
+	color: #999 !important; /* Fixes Network > Headers */
 }
 
 #-webkit-web-inspector #drawer-contents .webkit-line-number {
@@ -756,6 +800,36 @@
 #-webkit-web-inspector .placard .title,
 #-webkit-web-inspector .placard .subtitle {
 	color: #AAA !important;
+}
+
+#-webkit-web-inspector .navigator-tabbed-pane .tabbed-pane-header,
+#-webkit-web-inspector #scripts-editor-container-tabbed-pane .tabbed-pane-header,
+#-webkit-web-inspector #scripts-editor-container-tabbed-pane .tabbed-pane-header-tab {
+	background-image: none !important;
+	background-color: #222 !important;
+	color: #ccc !important;
+	border: 0 !important;
+}
+
+#-webkit-web-inspector #scripts-editor-container-tabbed-pane .tabbed-pane-header {
+	border-bottom: 1px solid #333 !important;
+}
+
+#-webkit-web-inspector #scripts-editor-container-tabbed-pane .tabbed-pane-header-tab.selected {
+	background-color: #333 !important;
+	border-color: #222 !important;
+}
+
+/* Code Mirror */
+#-webkit-web-inspector div.CodeMirror span.CodeMirror-matchingbracket {
+	color: #fff !important;
+	text-decoration: underline !important;
+}
+
+#-webkit-web-inspector .CodeMirror-scroll,
+#-webkit-web-inspector .tabbed-pane-content,
+#-webkit-web-inspector .resource-view .script-view {
+	background: #222 !important;
 }
 
 /* Call Stack */
@@ -843,7 +917,7 @@
 #-webkit-web-inspector #console-messages .console-group-messages .section .header::before,
 #-webkit-web-inspector #console-messages .properties-tree li.parent::before,
 #-webkit-web-inspector .outline-disclosure li.parent::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) #242424 !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) #242424 !important;
 }
 
 #-webkit-web-inspector .properties-tree li,
@@ -860,7 +934,7 @@
 #-webkit-web-inspector #console-messages .console-group-messages .section.expanded .header::before,
 #-webkit-web-inspector #console-messages .properties-tree li.parent.expanded::before,
 #-webkit-web-inspector .outline-disclosure li.parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) #242424 !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) #242424 !important;
 }
 
 @-webkit-keyframes webkit-error-level {
@@ -905,6 +979,17 @@
 
 #-webkit-web-inspector .data-grid table {
 	color: white !important;
+	background: #222 !important;
+}
+
+#-webkit-web-inspector .data-grid tr.selected,
+#-webkit-web-inspector .data-grid table.data tr.revealed.selected:nth-child(odd) {
+	color: white !important;
+	background: #000 !important;
+}
+
+#-webkit-web-inspector .data-grid table.data tr.revealed:nth-child(odd) {
+	background: #292929 !important; /* Zebra stripe Network > Cookies */
 }
 
 #-webkit-web-inspector .network-graph-bar,
@@ -953,13 +1038,13 @@
 }
 
 #-webkit-web-inspector #elements-content .parent::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) !important;
 	position: relative;
 	z-index: 999;
 }
 
 #-webkit-web-inspector #elements-content .parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) !important;
 }
 
 #-webkit-web-inspector .styles-element-state-pane {
@@ -1079,7 +1164,13 @@
 
 /* Set the console tab as the first item */
 #-webkit-web-inspector #toolbar .toolbar-item.console {
-	float: left;
+	position: absolute !important;
+	left: 0 !important;
+	top: 0 !important;
+}
+
+#-webkit-web-inspector #toolbar {
+	padding-left: 72px !important;
 }
 
 /**********************************************/
@@ -1099,4 +1190,11 @@
 #-webkit-web-inspector .popover .arrow {
 	margin-left: 10px !important;
 	margin-top: -15px !important;
+}
+
+/**********************************************/
+/* Settings
+/**********************************************/
+#-webkit-web-inspector #settings-screen .tabbed-pane-header-tab.selected {
+	background: #fff !important;
 }
