--- a/themes/google chrome/Custom.css
+++ b/themes/google chrome/Custom.css
@@ -31,6 +31,15 @@
 */
 
 /*
+	## Images
+	disclosureTriangleSmallDownWhite.png
+	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==);
+
+	disclosureTriangleSmallRightWhite.png
+	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC);
+*/
+
+/*
 	Dock-To-Right when using vertical splitting:
 	https://github.com/mauricelam/DockToRight
 
@@ -44,7 +53,7 @@
 	 ************************************/
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements .split-view-contents:first-child,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  .split-view-contents:first-child {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts .split-view-contents:first-child {
 		width: 100%;
 		height: 75%;
 		top: auto !important;
@@ -52,7 +61,7 @@
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements .split-view-contents.split-view-sidebar-right,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  .split-view-contents.split-view-sidebar-right {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts .split-view-contents.split-view-sidebar-right {
 		width: 100% !important;
 		height: 25% !important;
 		left: 0;
@@ -60,19 +69,19 @@
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  > .split-view {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view {
 		display: -webkit-flex;
 		-webkit-flex-flow: column;
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view > * ,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  > .split-view > * {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view > * {
 		-webkit-flex: 0;
 		position: relative !important;
 	}
 
 	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.elements > .split-view > :first-child,
-	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts  > .split-view > :first-child {
+	#-webkit-web-inspector.dock-to-right:not(.detached) .panel.scripts > .split-view > :first-child {
 		-webkit-flex: 1;
 	}
 
@@ -641,14 +650,18 @@
 /* Add drop down arrows to Event Listeners */
 #-webkit-web-inspector .section.expanded .header::before,
 #-webkit-web-inspector .event-bars .event-bar.expanded .header::before,
-#-webkit-web-inspector #scripts-debug-sidebar-contents .properties-tree li.parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
+#-webkit-web-inspector .section .properties-tree li.parent.expanded::before,
+#-webkit-web-inspector .computed-style .properties-tree li.parent.expanded::before,
+#-webkit-web-inspector .event-listener-breakpoints li.parent.expanded::before {
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) !important;
 }
 
 #-webkit-web-inspector .section .header::before,
 #-webkit-web-inspector .event-bars .event-bar .header::before,
-#-webkit-web-inspector #scripts-debug-sidebar-contents .properties-tree li.parent::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
+#-webkit-web-inspector .section .properties-tree li.parent::before,
+#-webkit-web-inspector .computed-style .properties-tree li.parent::before,
+#-webkit-web-inspector .event-listener-breakpoints li.parent::before {
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) !important;
 }
 
 /* Network */
@@ -738,7 +751,7 @@
 }
 
 #-webkit-web-inspector .outline-disclosure > ol .source-code {
-	color: #000 !important;
+	color: #999 !important; /* Fixes Network > Headers */
 }
 
 #-webkit-web-inspector #drawer-contents .webkit-line-number {
@@ -843,7 +856,7 @@
 #-webkit-web-inspector #console-messages .console-group-messages .section .header::before,
 #-webkit-web-inspector #console-messages .properties-tree li.parent::before,
 #-webkit-web-inspector .outline-disclosure li.parent::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) #242424 !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) !important;
 }
 
 #-webkit-web-inspector .properties-tree li,
@@ -860,7 +873,7 @@
 #-webkit-web-inspector #console-messages .console-group-messages .section.expanded .header::before,
 #-webkit-web-inspector #console-messages .properties-tree li.parent.expanded::before,
 #-webkit-web-inspector .outline-disclosure li.parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) #242424 !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) !important;
 }
 
 @-webkit-keyframes webkit-error-level {
@@ -905,6 +918,11 @@
 
 #-webkit-web-inspector .data-grid table {
 	color: white !important;
+	background: #222 !important;
+}
+
+#-webkit-web-inspector .data-grid table.data tr.revealed:nth-child(odd) {
+	background: #292929 !important; /* Zebra stripe Network > Cookies */
 }
 
 #-webkit-web-inspector .network-graph-bar,
@@ -953,13 +971,13 @@
 }
 
 #-webkit-web-inspector #elements-content .parent::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallRightWhite.png) !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAATklEQVQoz2NgIAf8//+fkViFrEC8HoitiFV8Boo7gViMWMUgfAiIY4CYmRjFMLwCiPWJVQzCp4DYmliT9YhxczQxbu4iJjQ2ALEl1WIQAFpqx0EumkjpAAAAAElFTkSuQmCC) !important;
 	position: relative;
 	z-index: 999;
 }
 
 #-webkit-web-inspector #elements-content .parent.expanded::before {
-	content: url(chrome-devtools://devtools/Images/disclosureTriangleSmallDownWhite.png) !important;
+	content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAsAAAAMCAYAAAC0qUeeAAAAWElEQVQoz2NgoCn4//8/KyEMU8gExNuA+AwevArZZCcCio3QnTIJh8JGbO6WAeKjaAr3AbEQLo+moikOxhcqbEC8DqpwEcjzhILRHIhPAbE6seFuQ3HkAQARPsRMK4Rb1wAAAABJRU5ErkJggg==) !important;
 }
 
 #-webkit-web-inspector .styles-element-state-pane {
